tests/errors/operators/number_overflows.sad
# number_overflows test
risk {
    2.0 ** 2000
} trap IllegalOperationError e {
    show(e.message)
}
